# pure_pursuit_controller

./: .gitignore  README.md  package.xml  setup.py
launch/: pure_pursuit.launch.py
offline_tools/: plot_track_with_waypoints.py
pure_pursuit_controller/: pure_pursuit.py  waypoint_recorder.py  waypoint_viz.py
waypoints/: waypoints.csv  waypoints_smooth.csv
